--- a/src/app/landing/discography/discography.component.html
+++ b/src/app/landing/discography/discography.component.html
@@ -1,1 +1,12 @@
-<p>discography works!</p>
+<div class="discography-container">
+  <h1>DISCOGRAFÍA Y ÁLBUMES</h1>
+
+  <div class="album-grid">
+    <div *ngFor="let album of albums" class="album-item">
+      <img [src]="'albums/' + album.image" alt="{{ album.title }}" class="album-image">
+      <h3>{{ album.title }}</h3>
+      <p>Año: {{ album.year }}</p>
+    </div>
+  </div>
+</div>
+
