--- a/src/app/landing/discography/discography.component.html
+++ b/src/app/landing/discography/discography.component.html
@@ -3,7 +3,7 @@
 
   <div class="album-grid">
     <div *ngFor="let album of albums" class="album-item">
-      <img [src]="'albums/' + album.image" alt="{{ album.title }}" class="album-image">
+      <img [src]="'' + album.image" alt="{{ album.title }}" class="album-image">
       <h3>{{ album.title }}</h3>
       <p>Año: {{ album.year }}</p>
     </div>
